# SeasonHunter

./: .gitignore  CMakeLists.txt  README.md
data/: org.diegotoral.seasonhunter.gschema.xml
src/: CMakeLists.txt  Config.vala.cmake  SeasonHunter.vala  Settings.vala  main.vala  season-hunter.vala
src/Dialogs/: PreferencesWindow.vala
src/Widgets/: SideBar.vala  Toolbar.vala
